# todolist-backend

./: pyproject.toml
common/: models.py
config/: settings.py  urls.py
todo/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
todo/migrations/: 0001_initial.py  0002_initial.py  0003_todo_done.py
users/: admin.py  models.py  serializers.py  views.py
users/migrations/: 0001_initial.py
